# crowdfunding

./: .gitignore  README.md  build.sh  go.mod  go.sum
internal/model/: payment.go  transaction.go
manhattan/: Cargo.toml  README.md
strange/: README.md  go.mod  go.sum
strange/internal/crowdfunding/: service.go
