[package]
name = "manhattan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.9" }
tokio = { version = "1.19.2", features = ["macros"] }
derive = { version = "1.0.0" }
thiserror = { version = "1.0.0" }
anyhow = { version = "1.0.58" }
mongodb = { version = "2.2.2", features = ["tokio-sync"] }
bson = { version = "2.3.0" }
rust-argon2 = { version = "1.0.0" }
dotenv = { version = "0.15.0" }
envy = { version = "0.4.1" }
async-trait = { version = "0.1.20" }
serde = { version = "1.0.89", features = ["derive"] }
log = { version = "0.4.5" }
axum-debug = { version = "0.3.3" }
axum-macros = { version = "0.2.2" }
axum-client-ip = { version = "0.2.0" }
axum-core = { version = "0.2.6" }